--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,9 @@
 	display:flex;
 	justify-content:center;
 }
+.brand-link {
+  padding: .28rem .5rem !important;
+}
 .nav.nav-pills.nav-sidebar.flex-column{
 	font-size:18px;
 }
