--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@
 .btn_transparent {
   border: 2px solid #3e6174;
   border-radius: 4px;
-  height: 28px;
+  height: 22px;
   width: 30px;
   color: #3e6174;
 }
@@ -118,5 +118,11 @@
 
 .mx-datepicker-range {
   width: 100% !important;
+}
+
+.table.text-center,
+.table.text-center td,
+.table.text-center th {
+  font-size: 12px;
 }
 
