--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Admin Lte
 @import "~admin-lte/dist/css/adminlte.min.css";
 
+@import "~vue-multiselect/dist/vue-multiselect.min.css";
+
 // Fontawesome
 @import "~@fortawesome/fontawesome-free/css/all";
 @import "~@fortawesome/fontawesome-free/css/brands";
