--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,12 @@
 @import "~@fortawesome/fontawesome-free/css/solid";
 @import "~@fortawesome/fontawesome-free/css/svg-with-js";
 @import "~@fortawesome/fontawesome-free/css/v4-shims";
+.form_btn{
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  justify-content: center;
+}
 .login_logo{
 	display:flex;
 	justify-content:center;
