--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+.card-body::after,
+.card-footer::after,
+.card-header::after {
+  display: none;
+}
+
 .lognCard {
   background-image: url(/images/loginbg.png?a49e5729cfa038ae5bdb04a917eeed17);
   background-repeat: no-repeat;
@@ -87,7 +93,12 @@
 }
 
 .card {
-  box-shadow: 0 0 1px #3e6174, 0 1px 3px #3e6174;
+  box-shadow: 0 0.46875rem 2.1875rem rgba(4, 9, 20, 0.03), 0 0.9375rem 1.40625rem rgba(4, 9, 20, 0.03), 0 0.25rem 0.53125rem rgba(4, 9, 20, 0.05), 0 0.125rem 0.1875rem rgba(4, 9, 20, 0.03);
+  border-radius: 0.25rem;
+}
+
+.content-wrapper {
+  background: rgba(255, 255, 255, 0.45) !important;
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
@@ -114,6 +125,17 @@
 
 .card-header {
   background-color: rgba(62, 97, 116, 0.1);
+  display: flex;
+  justify-content: space-between;
+}
+
+.title_user {
+  display: flex;
+  align-items: center;
+}
+
+.title_user .peIcon {
+  margin-right: 5px;
 }
 
 .mx-datepicker-range {
@@ -124,5 +146,117 @@
 .table.text-center td,
 .table.text-center th {
   font-size: 12px;
+}
+
+.btn_green {
+  box-shadow: 0 0.125rem 0.625rem rgba(58, 196, 125, 0.4), 0 0.0625rem 0.125rem rgba(58, 196, 125, 0.5);
+  cursor: pointer;
+  position: relative;
+  transition: color 0.15s, background-color 0.15s, border-color 0.15s, box-shadow 0.15s;
+  color: #fff;
+  background-color: #3ac47d;
+  border-color: #3ac47d;
+  font-size: 0.8rem;
+  font-weight: 500;
+  display: inline-flex !important;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  text-align: center;
+  vertical-align: middle;
+  align-items: center;
+}
+
+.btn_black i,
+.btn_green i {
+  margin-right: 0.5rem !important;
+}
+
+.btn_green:hover {
+  box-shadow: 0 0.125rem 0.625rem rgba(58, 196, 125, 0.5), 0 0.0625rem 0.125rem rgba(58, 196, 125, 0.6);
+  color: #fff;
+  background-color: #31a66a;
+  border-color: #2e9d64;
+  text-decoration: none;
+}
+
+.btn_black {
+  box-shadow: 0 0.125rem 0.625rem rgba(52, 58, 64, 0.4), 0 0.0625rem 0.125rem rgba(52, 58, 64, 0.5);
+  position: relative;
+  transition: color 0.15s, background-color 0.15s, border-color 0.15s, box-shadow 0.15s;
+  color: #fff;
+  background-color: #343a40;
+  border-color: #343a40;
+  font-size: 0.8rem;
+  font-weight: 500;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.btn_black:hover {
+  box-shadow: 0 0.125rem 0.625rem rgba(52, 58, 64, 0.5), 0 0.0625rem 0.125rem rgba(52, 58, 64, 0.6);
+  color: #fff;
+  background-color: #23272b;
+  border-color: #1d2124;
+  text-decoration: none;
+}
+
+.btn_blue {
+  box-shadow: 0 0.125rem 0.625rem rgba(22, 170, 255, 0.4), 0 0.0625rem 0.125rem rgba(22, 170, 255, 0.5);
+  position: relative;
+  transition: color 0.15s, background-color 0.15s, border-color 0.15s, box-shadow 0.15s;
+  color: #fff;
+  background-color: #16aaff;
+  border-color: #16aaff;
+  font-size: 0.8rem;
+  font-weight: 500;
+  border: 1px solid transparent;
+  padding: 0.35rem !important;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  display: inline-flex !important;
+  align-items: center;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.btn_blue:hover {
+  box-shadow: 0 0.125rem 0.625rem rgba(22, 170, 255, 0.5), 0 0.0625rem 0.125rem rgba(22, 170, 255, 0.6);
+  color: #fff;
+  background-color: #0098ef;
+  border-color: #0090e2;
+}
+
+.table.text-center,
+.table.text-center td,
+.table.text-center th {
+  vertical-align: middle;
+}
+
+.main-sidebar {
+  background: #fff;
+  box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
+}
+
+.nav-sidebar .nav-item > .nav-link {
+  transition: 0.5s;
+}
+
+.nav-sidebar .nav-item > .nav-link:hover,
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  background: #e0f3ff !important;
+  color: #3f6ad8 !important;
+  font-weight: bold;
+}
+
+.nav-pills .nav-link.active .sidebar_icon,
+.nav-sidebar .nav-item > .nav-link:hover .sidebar_icon {
+  color: #3f6ad8 !important;
 }
 
