--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,3 +260,79 @@
   color: #3f6ad8 !important;
 }
 
+.exp_header {
+  display: flex;
+  box-shadow: 0 0.46875rem 2.1875rem rgba(4, 9, 20, 0.03), 0 0.9375rem 1.40625rem rgba(4, 9, 20, 0.03), 0 0.25rem 0.53125rem rgba(4, 9, 20, 0.05), 0 0.125rem 0.1875rem rgba(4, 9, 20, 0.03);
+  border-width: 0;
+  transition: all 0.2s;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.exp_header .exp_header_item {
+  width: calc(100% / 4);
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+}
+
+.exp_header .exp_header_item span {
+  width: 54px;
+  height: 54px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin: 0 1rem 0 0;
+  background-color: #f7b924;
+  font-size: 1.7rem;
+  color: #343a40;
+}
+
+.exp_header .exp_header_item h6 {
+  margin: -0.5rem 0 0;
+  display: block;
+  opacity: 0.6;
+  font-size: 0.88rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+}
+
+.exp_header .exp_header_item h3 {
+  font-weight: bold;
+  font-size: 2.5rem;
+  display: block;
+  line-height: 1;
+  color: #495057;
+}
+
+.exp_header .exp_header_item:nth-child(2) span {
+  background: #d92550;
+  color: white;
+}
+
+.exp_header .exp_header_item:nth-child(3) span {
+  background: #3f6ad8;
+  color: white;
+}
+
+.exp_header .exp_header_item:nth-child(3) h3 {
+  color: #3f6ad8;
+}
+
+.exp_header .exp_header_item:nth-child(4) span {
+  background: #3ac47d;
+  color: white;
+}
+
+.exp_header .exp_header_item:nth-child(4) h3 {
+  color: #3ac47d;
+}
+
+.table td a {
+  font-weight: bold;
+}
+
