--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -219,3 +219,74 @@
 .nav-sidebar .nav-item>.nav-link:hover .sidebar_icon{
     color: #3f6ad8 !important;
 }
+.exp_header{
+    display: flex;
+    box-shadow: 0 0.46875rem 2.1875rem rgb(4 9 20 / 3%), 0 0.9375rem 1.40625rem rgb(4 9 20 / 3%), 0 0.25rem 0.53125rem rgb(4 9 20 / 5%), 0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
+    border-width: 0;
+    transition: all .2s;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .exp_header_item{
+        width: calc(100% / 4);
+        display: flex;
+        align-items: center;
+        padding: 1rem;
+        span{
+            width: 54px;
+            height: 54px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            margin: 0 1rem 0 0;
+            background-color: #f7b924;
+            font-size: 1.7rem;
+            color: #343a40 ;
+        }
+        h6{
+            margin: -0.5rem 0 0;
+            display: block;
+            opacity: .6;
+            font-size: .88rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #495057;
+        }
+        h3{
+            font-weight: bold;
+            font-size: 2.5rem;
+            display: block;
+            line-height: 1;
+            color: #495057;
+        }
+        &:nth-child(2){
+            span{
+                background: #d92550 ;
+                color: white;
+            }
+        }
+        &:nth-child(3){
+            span{
+                background: #3f6ad8 ;
+                color: white;
+            }
+            h3{
+                color: #3f6ad8;
+            }
+        }
+        &:nth-child(4){
+            span{
+                background: #3ac47d ;
+                color: white;
+            }
+            h3{
+                color: #3ac47d;
+            }
+        }
+    }
+}
+.table td a{
+    font-weight: bold;
+}
