--- a/public/css/style.css
+++ b/public/css/style.css
@@ -168,6 +168,7 @@
   align-items: center;
 }
 
+.btn_blue_icon i,
 .btn_black i,
 .btn_green i {
   margin-right: 0.5rem !important;
@@ -205,6 +206,7 @@
   text-decoration: none;
 }
 
+.btn_blue_icon,
 .btn_blue {
   box-shadow: 0 0.125rem 0.625rem rgba(22, 170, 255, 0.4), 0 0.0625rem 0.125rem rgba(22, 170, 255, 0.5);
   position: relative;
@@ -223,6 +225,10 @@
   align-items: center;
   text-align: center;
   vertical-align: middle;
+}
+
+.btn_blue_icon {
+  padding: 0.375rem 0.75rem !important;
 }
 
 .btn_blue:hover {
