--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,6 +23,9 @@
   margin-top: 20px;
   justify-content: center;
 }
+.mx-datepicker {
+    width: 100% !important;
+}
 .login_logo{
 	display:flex;
 	justify-content:center;
