--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,3 +1,9 @@
+*{
+    font-family: 'Overpass-Regular' !important;
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Overpass-Bold' !important;
+}
 .card-body::after, .card-footer::after, .card-header::after{
     display: none;
 }
@@ -81,7 +87,7 @@
     border-radius: 0.25rem;
 }
 .content-wrapper{
-    background: rgba(255,255,255,0.45) !important;
+    background: #070d19 !important;
 }
 .table-striped tbody tr:nth-of-type(odd){
     background-color: rgba(62, 97, 116, .1);
@@ -206,9 +212,11 @@
 .table.text-center, .table.text-center td, .table.text-center th{
     vertical-align: middle;
 }
+.top_nav_header,
 .main-sidebar{
-    background: #fff;
-    box-shadow: 7px 0 60px rgb(0 0 0 / 5%);
+    background: #0c1427;
+    // box-shadow: 7px 0 60px rgb(0 0 0 / 5%);
+    border-bottom: 1px solid #172340;
 }
 .nav-sidebar .nav-item>.nav-link{
     transition: .5s;
@@ -216,13 +224,14 @@
 .nav-sidebar .nav-item>.nav-link:hover,
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link{
-    background: #e0f3ff !important;
-    color: #3f6ad8 !important;
+    // background: #fff !important;
+    background: #0c1427 !important;
+    color: #727cf5 !important;
     font-weight: bold;
 }
 .nav-pills .nav-link.active .sidebar_icon,
 .nav-sidebar .nav-item>.nav-link:hover .sidebar_icon{
-    color: #3f6ad8 !important;
+    color: #727cf5 !important;
 }
 .exp_header{
     display: flex;
