--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Overpass-Regular" !important;
+  font-family: "Overpass-Light";
 }
 
 h1,
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Overpass-Bold" !important;
+  font-family: "Overpass-Bold";
 }
 
 .card-body::after,
@@ -282,13 +282,14 @@ h6 {
 
 .exp_header {
   display: flex;
-  box-shadow: 0 0.46875rem 2.1875rem rgba(4, 9, 20, 0.03), 0 0.9375rem 1.40625rem rgba(4, 9, 20, 0.03), 0 0.25rem 0.53125rem rgba(4, 9, 20, 0.05), 0 0.125rem 0.1875rem rgba(4, 9, 20, 0.03);
+  box-shadow: 0px 0px 1px white;
   border-width: 0;
   transition: all 0.2s;
   margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: #0c1427;
 }
 
 .exp_header .exp_header_item {
@@ -308,7 +309,7 @@ h6 {
   margin: 0 1rem 0 0;
   background-color: #f7b924;
   font-size: 1.7rem;
-  color: #343a40;
+  color: #fff;
 }
 
 .exp_header .exp_header_item h6 {
@@ -318,7 +319,7 @@ h6 {
   font-size: 0.88rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #495057;
+  color: #fff;
 }
 
 .exp_header .exp_header_item h3 {
@@ -326,7 +327,7 @@ h6 {
   font-size: 2.5rem;
   display: block;
   line-height: 1;
-  color: #495057;
+  color: #fff;
 }
 
 .exp_header .exp_header_item:nth-child(2) span {
