--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,10 +1,12 @@
 *{
-    font-family: 'Overpass-Regular' !important;
+    font-family: 'Overpass-Light';
 }
 h1,h2,h3,h4,h5,h6{
-    font-family: 'Overpass-Bold' !important;
+    font-family: 'Overpass-Bold';
 }
-.card-body::after, .card-footer::after, .card-header::after{
+.card-body::after,
+.card-footer::after,
+.card-header::after{
     display: none;
 }
 .lognCard{
@@ -235,13 +237,14 @@ h1,h2,h3,h4,h5,h6{
 }
 .exp_header{
     display: flex;
-    box-shadow: 0 0.46875rem 2.1875rem rgb(4 9 20 / 3%), 0 0.9375rem 1.40625rem rgb(4 9 20 / 3%), 0 0.25rem 0.53125rem rgb(4 9 20 / 5%), 0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
+    box-shadow: 0px 0px 1px white;
     border-width: 0;
     transition: all .2s;
     margin-bottom: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #0c1427;
     .exp_header_item{
         width: calc(100% / 4);
         display: flex;
@@ -257,7 +260,7 @@ h1,h2,h3,h4,h5,h6{
             margin: 0 1rem 0 0;
             background-color: #f7b924;
             font-size: 1.7rem;
-            color: #343a40 ;
+            color: #fff ;
         }
         h6{
             margin: -0.5rem 0 0;
@@ -266,14 +269,14 @@ h1,h2,h3,h4,h5,h6{
             font-size: .88rem;
             font-weight: 400;
             line-height: 1.5;
-            color: #495057;
+            color: #fff;
         }
         h3{
             font-weight: bold;
             font-size: 2.5rem;
             display: block;
             line-height: 1;
-            color: #495057;
+            color: #fff;
         }
         &:nth-child(2){
             span{
