--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,12 +1,9 @@
 @font-face {
-    font-family: 'Overpass-Regular';
-    src: url('../fonts/Overpass-Regular.ttf');
+    font-family: 'Podkova-Bold';
+    src: url('../fonts/Podkova-Bold.ttf');
 }
 @font-face {
-    font-family: 'Overpass-Bold';
-    src: url('../fonts/Overpass-Bold.ttf');
+    font-family: 'Podkova-Regular';
+    src: url('../fonts/Podkova.ttf');
 }
-@font-face {
-    font-family: 'Overpass-Light';
-    src: url('../fonts/Overpass-Light.ttf');
-}
+
