--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,8 +1,8 @@
 *{
-    font-family: 'Overpass-Light';
+    font-family: 'Podkova-Regular';
 }
 h1,h2,h3,h4,h5,h6{
-    font-family: 'Overpass-Bold';
+    font-family: 'Podkova-Bold';
 }
 .card-body::after,
 .card-footer::after,
@@ -71,7 +71,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .title_user{
     margin-bottom: 0;
-    color: #3e6174;
+    color: #b8e4fc;
 }
 .btn_transparent{
     border: 2px solid #3e6174;
@@ -84,12 +84,40 @@ h1,h2,h3,h4,h5,h6{
     background-color: #3e6174;
     color: #fff;
 }
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link{
+    color: #fff;
+    background-color: #10161c;
+    border-color: #395470 #395470 #395470;
+}
+.table-hover tbody tr:hover,
+.table{
+    color: #fff !important;
+}
+.page-item.active .page-link{
+    background-color: #153856;
+    border-color: #1a507d;
+}
+.table thead th,
+.table-bordered th, .table-bordered td{
+    border-bottom: 2px solid #395470;
+    border-color: #395470;
+}
+.nav-tabs{
+    border-bottom: 1px solid #395470;
+}
+.form-control{
+    background-color: #0c1427;
+    border: 1px solid #0947d9;
+}
 .card{
     box-shadow: 0 0.46875rem 2.1875rem rgb(4 9 20 / 3%), 0 0.9375rem 1.40625rem rgb(4 9 20 / 3%), 0 0.25rem 0.53125rem rgb(4 9 20 / 5%), 0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
     border-radius: 0.25rem;
+    background: #0c1427;
+    border-bottom: 1px solid #172340;
 }
 .content-wrapper{
     background: #070d19 !important;
+    transition: .5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 .table-striped tbody tr:nth-of-type(odd){
     background-color: rgba(62, 97, 116, .1);
@@ -98,11 +126,10 @@ h1,h2,h3,h4,h5,h6{
     background-color: rgba(62, 97, 116, .2);
 }
 .logout_btn{
-    border: 2px solid #3e6174;
+    border: 2px solid #fff;
     border-radius: 4px;
-    color: #3e6174;
+    color: #fff;
     padding: .4rem 1.5rem;
-    font-weight: bold;
 }
 .logout_btn:hover{
     background-color: #3e6174;
@@ -118,7 +145,7 @@ h1,h2,h3,h4,h5,h6{
     display: flex;
     align-items: center;
 }
-.title_user .peIcon{
+.title_user .sidebar_icon {
     margin-right: 5px;
 }
 .mx-datepicker-range{
@@ -233,7 +260,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .nav-pills .nav-link.active .sidebar_icon,
 .nav-sidebar .nav-item>.nav-link:hover .sidebar_icon{
-    color: #727cf5 !important;
+    color: #fff !important;
 }
 .exp_header{
     display: flex;
@@ -306,4 +333,253 @@ h1,h2,h3,h4,h5,h6{
 }
 .table td a{
     font-weight: bold;
+}
+.main-footer{
+    background: #0c1427;
+    border-top: 1px solid #172340;
+}
+label{
+    color: white;
+}
+
+
+// theme switecher
+.toggleWrapper {
+    position: fixed;
+    z-index: 99999;
+    bottom: 0px;
+    right: 0px;
+    overflow: hidden;
+    padding: 0;
+    transform: scale(.5);
+  }
+  .toggleWrapper input {
+    position: absolute;
+    left: -99em;
+  }
+
+  .toggle {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    width: 90px;
+    height: 50px;
+    background-color: #83D8FF;
+    border-radius: 84px;
+    transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+  .toggle:before {
+    content: "AM";
+    position: absolute;
+    left: -50px;
+    top: 15px;
+    font-size: 18px;
+  }
+  .toggle:after {
+    content: "PM";
+    position: absolute;
+    right: -48px;
+    top: 15px;
+    font-size: 18px;
+    color: #749ED7;
+  }
+
+  .toggle__handler {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    top: 3px;
+    left: 3px;
+    width: 44px;
+    height: 44px;
+    background-color: #FFCF96;
+    border-radius: 50px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    transition: all 400ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transform: rotate(-45deg);
+  }
+  .toggle__handler .crater {
+    position: absolute;
+    background-color: #E8CDA5;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+    border-radius: 100%;
+  }
+  .toggle__handler .crater--1 {
+    top: 18px;
+    left: 10px;
+    width: 4px;
+    height: 4px;
+  }
+  .toggle__handler .crater--2 {
+    top: 28px;
+    left: 22px;
+    width: 6px;
+    height: 6px;
+  }
+  .toggle__handler .crater--3 {
+    top: 10px;
+    left: 25px;
+    width: 8px;
+    height: 8px;
+  }
+
+  .star {
+    position: absolute;
+    background-color: #ffffff;
+    transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    border-radius: 50%;
+  }
+
+  .star--1 {
+    top: 10px;
+    left: 35px;
+    z-index: 0;
+    width: 30px;
+    height: 3px;
+  }
+
+  .star--2 {
+    top: 18px;
+    left: 28px;
+    z-index: 1;
+    width: 30px;
+    height: 3px;
+  }
+
+  .star--3 {
+    top: 27px;
+    left: 40px;
+    z-index: 0;
+    width: 30px;
+    height: 3px;
+  }
+
+  .star--4,
+  .star--5,
+  .star--6 {
+    opacity: 0;
+    transition: all 300ms 0 cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+
+  .star--4 {
+    top: 16px;
+    left: 11px;
+    z-index: 0;
+    width: 2px;
+    height: 2px;
+    transform: translate3d(3px, 0, 0);
+  }
+
+  .star--5 {
+    top: 32px;
+    left: 17px;
+    z-index: 0;
+    width: 3px;
+    height: 3px;
+    transform: translate3d(3px, 0, 0);
+  }
+
+  .star--6 {
+    top: 36px;
+    left: 28px;
+    z-index: 0;
+    width: 2px;
+    height: 2px;
+    transform: translate3d(3px, 0, 0);
+  }
+
+  input:checked + .toggle {
+    background-color: #749DD6;
+  }
+  input:checked + .toggle:before {
+    color: #749ED7;
+  }
+  input:checked + .toggle:after {
+    color: #ffffff;
+  }
+  input:checked + .toggle .toggle__handler {
+    background-color: #FFE5B5;
+    transform: translate3d(40px, 0, 0) rotate(0);
+  }
+  input:checked + .toggle .toggle__handler .crater {
+    opacity: 1;
+  }
+  input:checked + .toggle .star--1 {
+    width: 2px;
+    height: 2px;
+  }
+  input:checked + .toggle .star--2 {
+    width: 4px;
+    height: 4px;
+    transform: translate3d(-5px, 0, 0);
+  }
+  input:checked + .toggle .star--3 {
+    width: 2px;
+    height: 2px;
+    transform: translate3d(-7px, 0, 0);
+  }
+  input:checked + .toggle .star--4,
+  input:checked + .toggle .star--5,
+  input:checked + .toggle .star--6 {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+  input:checked + .toggle .star--4 {
+    transition: all 300ms 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+  input:checked + .toggle .star--5 {
+    transition: all 300ms 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+  input:checked + .toggle .star--6 {
+    transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+body{
+    transition: 1s;
+}
+.lognCard{
+    .form-control{
+        background-color: #fff !important;
+        border: 1px solid #ced4da !important;
+    }
+}
+.light{
+
+    .content-wrapper{
+        background: #fff !important;
+    }
+    .card{
+        background-color: #fff;
+        border: 1px solid rgba(0, 0, 0, 0.125);
+    }
+    .lognCard{
+        background: #001f3f8a;
+        .form-control{
+            background-color: #fff !important;
+            border: 1px solid #ced4da !important;
+        }
+    }
+    .table-hover tbody tr:hover, .table,
+    .title_user{
+        color: #0c1427 !important;
+    }
+    .table thead th {
+        border-bottom: 2px solid #dee2e6 !important;
+    }
+    .table th, .table td{
+        border: 1px solid #dee2e6 !important;
+    }
+    label{
+        color: #0c1427;
+    }
+    .form-control{
+        background-color: #fff !important;
+        border: 1px solid #ced4da !important;
+    }
+    .nav-tabs .nav-link.active,
+    .nav-tabs .nav-item.show .nav-link{
+        color: #495057 !important;
+        background-color: #f8fafc !important;
+        border-color: #dee2e6 #dee2e6 #f8fafc !important;
+    }
 }
