--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -262,6 +262,45 @@ h1,h2,h3,h4,h5,h6{
 .nav-sidebar .nav-item>.nav-link:hover .sidebar_icon{
     color: #fff !important;
 }
+.gallery_item{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    margin-right: 10px;
+    border-radius: 6px;
+}
+.gallery_item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery_item .remove{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: red;
+    opacity: 0;
+}
+.gallery_item::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: .5s;
+}
+.gallery_item:hover .remove,
+.gallery_item:hover:before{
+    opacity: 1;
+}
 .exp_header{
     display: flex;
     box-shadow: 0px 0px 1px white;
@@ -583,3 +622,4 @@ body{
         border-color: #dee2e6 #dee2e6 #f8fafc !important;
     }
 }
+
