--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,6 +325,33 @@ h6 {
   position: relative;
   margin-right: 10px;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+.gallery_item.showed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  bottom: 0;
+  height: 100%;
+  z-index: 99999;
+}
+
+.gallery_item.showed img {
+  width: 80%;
+  height: auto;
+  position: relative;
+  z-index: 1;
+}
+
+.gallery_item.showed:before {
+  opacity: 1;
+}
+
+.gallery_item.showed .remove {
+  display: none;
 }
 
 .gallery_item img {
@@ -336,9 +363,8 @@ h6 {
 
 .gallery_item .remove {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 2px;
+  right: 5px;
   color: red;
   opacity: 0;
 }
@@ -353,6 +379,7 @@ h6 {
   background: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: 0.5s;
+  pointer-events: none;
 }
 
 .gallery_item:hover .remove,
