--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -272,6 +272,29 @@ h1,h2,h3,h4,h5,h6{
     position: relative;
     margin-right: 10px;
     border-radius: 6px;
+    cursor: pointer;
+    &.showed{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        bottom: 0;
+        height: 100%;
+        z-index: 99999;
+        img{
+            width: 80%;
+            height: auto;
+            position: relative;
+            z-index: 1;
+        }
+        &:before{
+            opacity: 1;
+        }
+        .remove{
+            display: none;
+        }
+    }
 }
 .gallery_item img{
     width: 100%;
@@ -280,9 +303,8 @@ h1,h2,h3,h4,h5,h6{
 }
 .gallery_item .remove{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 2px;
+    right: 5px;
     color: red;
     opacity: 0;
 }
@@ -296,6 +318,7 @@ h1,h2,h3,h4,h5,h6{
     background: rgba(0, 0, 0, 0.5);
     opacity: 0;
     transition: .5s;
+    pointer-events: none;
 }
 .gallery_item:hover .remove,
 .gallery_item:hover:before{
