--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26283,7 +26283,7 @@ svg:not(:root).svg-inline--fa {
 }
 
 .isRequired {
-  border: 1px solid red;
+  border: 1px solid red !important;
 }
 
 input::-webkit-outer-spin-button,
