--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,7 +40,7 @@
 	font-size:18px;
 }
 .isRequired{
-	border:1px solid red;
+	border:1px solid red !important;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
