--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -644,5 +644,9 @@ body{
         background-color: #f8fafc !important;
         border-color: #dee2e6 #dee2e6 #f8fafc !important;
     }
+    .form-date input, .mx-datepicker-body{
+        background-color: #fff !important;
+        border: 1px solid #0c1427 !important;
+    }
 }
 
