--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,19 +18,192 @@ h6 {
 }
 
 .lognCard {
-  background-image: url(/images/loginbg.png?a49e5729cfa038ae5bdb04a917eeed17);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   height: 100vh;
   width: 100%;
   margin: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background: #FFFFFF;
 }
 
-.card-body.login-card-body {
+.lognCard .login_bg_top {
+  width: 100%;
+  height: 455px;
+  background-image: url(/img/loginbg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 116px;
+}
+
+.lognCard .login_bg_top .logo_text {
+  font-family: "OpenSans-ExtraBold";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 64px;
+  line-height: 80px;
+  letter-spacing: -0.387234px;
+  color: #FFFFFF;
+  max-width: 1100px;
+  padding-left: 40px;
+  border-left: 8px solid #fff;
+  margin: 0;
+}
+
+.lognCard .form_content {
+  background: #FFFFFF;
+  box-shadow: 0px 20px 27px rgba(0, 0, 0, 0.05);
+  border-radius: 12px;
+  width: 409px;
+  padding: 15px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -87px;
+  padding-top: 30px;
+  padding-bottom: 40px;
+}
+
+.lognCard .form_content h2 {
+  font-family: "OpenSans-Bold";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 49px;
+  letter-spacing: -0.995745px;
+  background: linear-gradient(135deg, #21D4FD 0%, #2152FF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 20px;
+}
+
+.lognCard .form_content p {
+  font-family: "OpenSans-Regular";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: -0.553191px;
+  color: #8392AB;
+  margin-bottom: 60px;
+  margin-top: 0;
+}
+
+.lognCard .form_content .input_group {
+  margin-bottom: 30px;
+}
+
+.input_checkbox {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.input_checkbox label {
+  font-family: "OpenSans-Regular";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: -0.387234px;
+  color: #252F40;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.input_checkbox label::before {
+  content: "";
+  position: relative;
+  width: 20px;
+  height: 20px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #252F40;
+  border-radius: 4px;
+  margin-right: 10px;
+  color: white;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.input_checkbox input {
+  position: absolute;
+  left: 0;
+  opacity: 0;
+}
+
+.input_checkbox input:checked + label::before {
+  background-color: #252F40;
+  background-image: url(/img/check.svg);
+}
+
+.copyright {
+  font-family: "OpenSans-Regular";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: -0.442553px;
+  color: #8392AB;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.input_group label {
+  font-family: "OpenSans-SemiBold";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: -0.331915px;
+  color: #252F40;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 7px;
+}
+
+.input_group input {
+  background: #FFFFFF;
+  border: 1px solid #D9D9D9;
+  border-radius: 6px;
+  padding: 9.5px 12px;
+  width: 100%;
+  font-family: "OpenSans-SemiBold";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: -0.387234px;
+}
+
+.input_group input:placeholder {
+  color: #D9D9D9;
+}
+
+.btn_dark_blue {
+  background: linear-gradient(135deg, #3A416F 0%, #141727 100%);
+  box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.12), 0px 2px 4px -1px rgba(0, 0, 0, 0.07);
+  border-radius: 8px;
+  border: none;
+  width: 100%;
+  padding: 10px;
+  font-family: "OpenSans-ExtraBold";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: -0.387234px;
+  color: #FFFFFF;
+}
+
+.card-brgb-in-card-body {
   max-height: 340px;
   width: 400px;
   position: relative;
@@ -38,13 +211,6 @@ h6 {
 
 .input-group {
   margin-bottom: 15px;
-}
-
-.login_title {
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 15px;
 }
 
 .login_alert {
@@ -294,12 +460,13 @@ h6 {
 
 .top_nav_header,
 .main-sidebar {
-  background: #0c1427;
+  background: #161624;
   border-bottom: 1px solid #172340;
 }
 
 .nav-sidebar .nav-item > .nav-link {
   transition: 0.5s;
+  padding: 5px 10px;
 }
 
 .nav-sidebar .nav-item > .nav-link:hover,
@@ -497,6 +664,7 @@ label {
   background-color: #83D8FF;
   border-radius: 84px;
   transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  margin-bottom: 0;
 }
 
 .toggle:before {
@@ -686,11 +854,6 @@ body {
   transition: 1s;
 }
 
-.lognCard .form-control {
-  background-color: #fff !important;
-  border: 1px solid #ced4da !important;
-}
-
 .light .content-wrapper {
   background: #fff !important;
 }
@@ -698,15 +861,6 @@ body {
 .light .card {
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.light .lognCard {
-  background: #001f3f8a;
-}
-
-.light .lognCard .form-control {
-  background-color: #fff !important;
-  border: 1px solid #ced4da !important;
 }
 
 .light .table-hover tbody tr:hover,
@@ -744,5 +898,14 @@ body {
 .light .mx-datepicker-body {
   background-color: #fff !important;
   border: 1px solid #0c1427 !important;
+}
+
+.nav-sidebar .nav-link p {
+  font-family: "Inter-Medium";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13.17px;
+  line-height: 32px;
+  color: #FFFFFF;
 }
 
