--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -10,30 +10,185 @@ h1,h2,h3,h4,h5,h6{
     display: none;
 }
 .lognCard{
-    background-image: url(../img/loginbg.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     height: 100vh;
     width: 100%;
     margin: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: #FFFFFF;
+    .login_bg_top{
+        width: 100%;
+        height: 455px;
+        background-image: url(/img/loginbg.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        // background: linear-gradient(135deg, #3A416F 0%, #141727 100%);
+        // mix-blend-mode: normal;
+        border-radius: 12px;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 116px;
+        .logo_text{
+            font-family: 'OpenSans-ExtraBold';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 64px;
+            line-height: 80px;
+            letter-spacing: -0.387234px;
+            color: #FFFFFF;
+            max-width: 1100px;
+            padding-left: 40px;
+            border-left: 8px solid #fff;
+            margin: 0;
+        }
+    }
+    .form_content{
+        background: #FFFFFF;
+        box-shadow: 0px 20px 27px rgba(0, 0, 0, 0.05);
+        border-radius: 12px;
+        width: 409px;
+        padding: 15px;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: -87px;
+        padding-top: 30px;
+        padding-bottom: 40px;
+        h2{
+            font-family: 'OpenSans-Bold';
+            font-style: normal;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 49px;
+            letter-spacing: -0.995745px;
+            background: linear-gradient(135deg, #21D4FD 0%, #2152FF 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 20px;
+        }
+        p{
+            font-family: 'OpenSans-Regular';
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 25px;
+            letter-spacing: -0.553191px;
+            color: #8392AB;
+            margin-bottom: 60px;
+            margin-top: 0;
+        }
+        .input_group{
+            margin-bottom: 30px;
+        }
+    }
 }
-.card-body.login-card-body{
+.input_checkbox{
+    position: relative;
+    margin-bottom: 30px;
+    label{
+        font-family: 'OpenSans-Regular';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 19px;
+        letter-spacing: -0.387234px;
+        color: #252F40;
+        text-align: left;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        &::before{
+            content: '';
+            position: relative;
+            width: 20px;
+            height: 20px;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #252F40;
+            border-radius: 4px;
+            margin-right: 10px;
+            color: white;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    }
+    input{
+        position: absolute;
+        left: 0;
+        opacity: 0;
+        &:checked + label::before{
+            background-color: #252F40;
+            background-image: url(/img/check.svg);
+        }
+    }
+}
+.copyright{
+    font-family: 'OpenSans-Regular';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: -0.442553px;
+    color: #8392AB;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.input_group{
+    label{
+        font-family: 'OpenSans-SemiBold';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: -0.331915px;
+        color: #252F40;
+        width: 100%;
+        text-align: left;
+        margin-bottom: 7px;
+    }
+    input{
+        background: #FFFFFF;
+        border: 1px solid #D9D9D9;
+        border-radius: 6px;
+        padding: 9.5px 12px;
+        width: 100%;
+        font-family: 'OpenSans-SemiBold';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        letter-spacing: -0.387234px;
+        &:placeholder{
+            color: #D9D9D9;
+        }
+    }
+}
+.btn_dark_blue{
+    background: linear-gradient(135deg, #3A416F 0%, #141727 100%);
+    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.12), 0px 2px 4px -1px rgba(0, 0, 0, 0.07);
+    border-radius: 8px;
+    border: none;
+    width: 100%;
+    padding: 10px;
+    font-family: 'OpenSans-ExtraBold';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 19px;
+    letter-spacing: -0.387234px;
+    color: #FFFFFF;
+}
+.card-brgb-in-card-body{
     max-height: 340px;
     width: 400px;
     position: relative;
 }
 .input-group{
     margin-bottom: 15px;
-}
-.login_title{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 15px;
 }
 .login_alert{
     border: 2px solid red;
@@ -243,12 +398,13 @@ h1,h2,h3,h4,h5,h6{
 }
 .top_nav_header,
 .main-sidebar{
-    background: #0c1427;
+    background: #161624;
     // box-shadow: 7px 0 60px rgb(0 0 0 / 5%);
     border-bottom: 1px solid #172340;
 }
 .nav-sidebar .nav-item>.nav-link{
     transition: .5s;
+    padding: 5px 10px;
 }
 .nav-sidebar .nav-item>.nav-link:hover,
 .nav-pills .nav-link.active,
@@ -429,6 +585,7 @@ label{
     background-color: #83D8FF;
     border-radius: 84px;
     transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    margin-bottom: 0;
   }
   .toggle:before {
     content: "AM";
@@ -599,12 +756,7 @@ label{
 body{
     transition: 1s;
 }
-.lognCard{
-    .form-control{
-        background-color: #fff !important;
-        border: 1px solid #ced4da !important;
-    }
-}
+
 .light{
 
     .content-wrapper{
@@ -614,13 +766,7 @@ body{
         background-color: #fff;
         border: 1px solid rgba(0, 0, 0, 0.125);
     }
-    .lognCard{
-        background: #001f3f8a;
-        .form-control{
-            background-color: #fff !important;
-            border: 1px solid #ced4da !important;
-        }
-    }
+
     .table-hover tbody tr:hover, .table,
     .title_user{
         color: #0c1427 !important;
@@ -650,3 +796,11 @@ body{
     }
 }
 
+.nav-sidebar .nav-link p{
+    font-family: 'Inter-Medium';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13.17px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
